added a reference to GitHub repository

--- a/styles.css
+++ b/styles.css
@@ -54,4 +54,10 @@ h1 {
     margin-left: 5px;
     color: black;
   }
+
+  #GitHub_link {
+    margin-left: 35px;
+    font-size: 10pt;
+    margin-top: 0;
+  }
   
