--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,11 @@ h1 {
   }
 
   #GitHub_link {
-    margin-left: 35px;
+    text-align: center;
+    margin-left: -100pt;
     font-size: 10pt;
-    margin-top: 0;
+    width: 100%;
+    position: absolute;
+   
   }
   
